
= rufus-tokyo CHANGELOG.txt


== rufus-tokyo - 1.0.6    not yet released


== rufus-tokyo - 1.0.5    released 2010/01/06

- todo  : now using getconf to determine INT_MIN (thanks oklahoma_mixer)
- bug   : issue with ree and lib.free(pointer), switching to tcfree


== rufus-tokyo - 1.0.4    released 2009/12/25

- bug   : memory leak, gotten values not freed
- todo  : Rufus::Tokyo::Tyrant and TyrantTable now reconnects (120 seconds)


== rufus-tokyo - 1.0.3    released 2009/11/16

- bug   : newer versions of FFI have [undocumented] bool type. Adapted.


== rufus-tokyo - 1.0.2    released 2009/11/01

- bug   : HashMethods#to_a not working right with Ruby 1.9.1. Fixed.
- bug   : REE problem with libXXXopen, had to switch from == 1 to != 0
- todo  : added #counter_value to Cabinet/Tyrant
- todo  : added default_proc / default value to Cabinet/Tyrant (not tables).
- todo  : Table#delete_keys_with_prefix now using qry#searchout.
- todo  : cleaned up 'no transactions for Tyrant [table]' code.
- todo  : db#ldelete(k0, k1, ...) now OK.
- todo  : minimal warnings when running with -w
- todo  : db#mget(k0, k1, ...) now OK.
- added : class level open() for Table classes and Dystopia
- bug   : the primary key is not stringified by get() for Table or TyrantTable
- bug   : keys() crashes for Rufus::Edo::Cabinet.new('*.tcb')
- bug   : keys() without :prefix returns duplicate keys for b-tree database
          (Edo or Tokyo) due to iteration, while the underlying C code or even
          calls with :prefix do not
- bug   : specifying tuning parameters causes Rufus::Edo::Cabinet.new('*.tcf')
          to raise an exception
- bug   : keys() and each() don't work fixed-width database, due to fwmkeys()
          not being supported (Edo and Tokyo)
- added : can set built-in or custom comparison functions for b-tree databases
          (Edo interface only)
- todo  : reenabled #copy for Tyrant (Edo and Tokyo)
- added : query_count() to match query_delete() for tables (Edo and Tokyo)