@@ -32,6 +32,11 @@ describe 'Rufus::Tokyo::Cabinet .tcb' do
     @db.getdup('a').should.equal([ 'a0', 'a1' ])
   end
 
+  it 'should return nul when getdupping a missing key' do
+
+    @db.getdup('b').should.equal(nil)
+  end
+
   it 'should be able to fetch keys for duplicate values' do
     [ %w[John  Hornbeck],
       %w[Tim   Gourley],
