@@ -2,7 +2,9 @@
 = rufus-tokyo CHANGELOG.txt
 
 
-== rufus-tokyo - 1.0.6    not yet released
+== rufus-tokyo - 1.0.6    released 2010/02/01
+
+- gh #29 : segfault when getdup(unknown_key). Fixed, thanks Dmitry
 
 
 == rufus-tokyo - 1.0.5    released 2010/01/06
